After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757372 - race condition on shutdown causes crashes
race condition on shutdown causes crashes
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gapplication
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-10-30 15:39 UTC by Matthias Clasen
Modified: 2015-12-16 14:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GApplication: destroy the impl on shutdown (1.14 KB, patch)
2015-10-30 15:41 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Matthias Clasen 2015-10-30 15:39:04 UTC
The downstream bug here: https://bugzilla.redhat.com/show_bug.cgi?id=1226229 has a number of crashes that are caused by dbus calls coming in and getting dispatched after shutdown has been called.
Comment 1 Allison Karlitskaya (desrt) 2015-10-30 15:41:08 UTC
Created attachment 314497 [details] [review]
GApplication: destroy the impl on shutdown

It's theoretically possible (and see in the wild) for D-Bus messages to
come in to the application after shutdown() has been called and while
we're draining out the lingering events in the main context.

Prevent this from happening by ensuring we unregister our objects on
D-Bus during the shutdown process.
Comment 2 Matthias Clasen 2015-10-30 15:52:08 UTC
Thats similar to what we do in gtk now: destroy the impl object on shutdown. I guess thats a good thing
Comment 3 Matthias Clasen 2015-10-30 15:54:16 UTC
Review of attachment 314497 [details] [review]:

makes sense to me. Thanks for investigating.
Comment 4 Matthias Clasen 2015-12-16 14:10:00 UTC
Attachment 314497 [details] pushed as 21b1c39 - GApplication: destroy the impl on shutdown